# EchoCard-Android

./: .gitignore  README.md  gradle.properties  local.properties.example  local.properties.template  settings.gradle.kts
app/: build.gradle.kts
app/libs/: callmate-ble-0.1.0.aar
app/src/androidTest/java/com/vaca/callmate/: DashboardScrollAutomationTest.kt  ExampleInstrumentedTest.kt  MainTabNavigationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  msbc_jni.c  opus_jni.cpp
app/src/main/java/com/vaca/callmate/: CallMateApplication.kt  MainActivity.kt
app/src/main/java/com/vaca/callmate/core/: AppFeatureFlags.kt
app/src/main/java/com/vaca/callmate/core/audio/: MsbcEncoder.kt  (+7 more)
app/src/main/java/com/vaca/callmate/data/: AbnormalCallRecordStore.kt  AppPreferences.kt  IncomingCall.kt  MockData.kt  Models.kt  ProcessStrategyStore.kt  VoiceTone.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/test/java/com/vaca/callmate/: ExampleUnitTest.kt
docs/: ANDROID_MCU_INCOMING_CALL_STRATEGY.md  ANDROID_PHONE_SIDE_CALLER_METADATA.md  ANDROID_SECONDARY_DEVELOPMENT_GUIDE.md  CALL_STATE_ARCHITECTURE.md  HFP_TO_APP_EVT_INCOMING_CALL_STATE_MACHINE.md  IOS_TO_ANDROID_PARITY_PLAN.md  MOBILE_BLE_PREBUILDS.md  PBAP_CONTACT_LOOKUP_PLAN.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
key/: README.md  generate_keystore.sh
script/: README.md  dashboard_scroll_automation.sh  profile_gfx.sh  publish_all.sh  quick_scroll_perf.sh  release_apk.sh
(+126 files in other folders)
